--- a/AppCoder/templates/appcoder/padre.html
+++ b/AppCoder/templates/appcoder/padre.html
@@ -34,9 +34,12 @@
                     <li class="nav-item"><a class="nav-link" href="{%  url 'profesores' %}">Profesores</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'estudiantes' %}">Estudiantes</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'entregables'%}">Entregables</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'Login' %}">Iniciar Sesión</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'Register' %}">Crear Cuenta</a></li>
-                    <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
+                    <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
+                    <a class="btn btn-primary" href="{% url 'Register' %}">Registro</a>
+                    <form action="{% url 'Logout' %}" method="post" style="display: inline;">
+                        {% csrf_token %}
+                        <button class="btn btn-primary" type="submit">Logout</button>
+                    </form>
                 </ul>
             </div>
         </div>
